Implemented class to convert notebooks to scripts (#82)
* Implemented class to convert notebooks to scripts

JupyterInvertor class takes the initial dataset directory and directory of refactored dataset. Firstly, it convert .ipynb file to json and then stores is as Notebook object. Notebook object has method to convert json representation of notebook to linear script. Thus, JupyterInvertor creates Notebook objects for all notebooks in projects and then creates corresponding scripts in the refactored dataset directory.

At the moment, the launch of this script via gradle is not implemented for the following reasons:

- JupyterInvertor class uses JSON, which downloads in build.gradle.kts, so it's impossible to put this class there.

- gradle doesn't see JupyterInvertor by import.

So I don't understand what to should I do to use it in Gradle.

* Changed name of file and deleted blank lines

* Changing of  imports order

* Refactored Jupyter Dataset Transformer

Started using Gson instead of previous json library. Changed Names of classes, files, variables etc. Deleted unusable variables, functions etc. Added comments.

Not ready yet:

- Kotlin-style functions for string transformations.

- Gradle task to launch refactoring.

* Figured out with fradle task and added StringBuilders

* style fixes

* style fixes

* Added tests for Jupyter refactoring task

* Deleted artefact

* Deleted .DS_Store files

* Added catching other types of notebook json

Firstly, added catching of error in json file of jupyter notebook. Secondly, adding catching of error when json of notebook cell presented not as json array of separate lines.

* Corrected ktlint exception

* fix