@@ -37,6 +37,28 @@ open class PythonAnalysisCliTask : BaseAnalysisCliTask() {
     val venv: String? by project
 }
 
+open class JupyterDatasetRefactoringCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Input directory of dataset with repositories
+    @get:Input
+    val input: String? by project
+
+    // Output directory of refactored dataset
+    @get:Input
+    val output: String? by project
+
+    init {
+        jvmArgs = listOf(
+            "-Djava.awt.headless=true",
+            "--add-exports",
+            "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "-Djdk.module.illegalAccess.silent=true"
+        )
+        maxHeapSize = "20g"
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+}
+
 dependencies {
     implementation(project(":kotlin-analysers"))
     implementation(project(":python-analysers"))
@@ -45,6 +67,15 @@ dependencies {
 }
 
 tasks {
+    register<JupyterDatasetRefactoringCliTask>("preprocessJupyterDataset") {
+        dependsOn("buildPlugin")
+        args = listOfNotNull(
+            "preprocessJupyterDataset",
+            input?.let { "--input=$it" },
+            output?.let { "--output=$it" }
+        )
+    }
+
     register<BaseAnalysisCliTask>("cli") {
         dependsOn("buildPlugin")
         args = listOfNotNull(
